# process-wrap

./: CHANGELOG.md  CITATION.cff  COPYRIGHT  Cargo.toml  README.md  cliff.toml  release.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: generic_wrap.rs  lib.rs  std.rs  tokio.rs  windows.rs
src/std/: core.rs  creation_flags.rs  job_object.rs  kill_on_drop.rs  process_group.rs  process_session.rs  reset_sigmask.rs
src/tokio/: core.rs  creation_flags.rs  job_object.rs  kill_on_drop.rs  process_group.rs  process_session.rs  reset_sigmask.rs
tests/: multiproc_helper.rs  std_unix.rs  std_windows.rs  tokio_unix.rs  tokio_windows.rs
tests/std_unix/: id_same_as_inner.rs  inner_read_stdout.rs  into_inner_write_stdin.rs  kill_and_try_wait.rs  mod.rs  multiproc_linux.rs  signals.rs  try_wait_after_die.rs  try_wait_twice_after_sigterm.rs  wait_after_die.rs  wait_twice.rs  wait_twice_after_sigterm.rs  wait_with_output.rs
tests/std_windows/: id_same_as_inner.rs  inner_read_stdout.rs  into_inner_write_stdin.rs  kill_and_try_wait.rs  mod.rs  read_creation_flags.rs  try_wait_after_die.rs  wait_after_die.rs  wait_twice.rs  wait_with_output.rs
tests/tokio_unix/: id_same_as_inner.rs  inner_read_stdout.rs  into_inner_write_stdin.rs  kill_and_try_wait.rs  mod.rs  multiproc.rs  multiproc_linux.rs  signals.rs  try_wait_after_die.rs  try_wait_twice_after_sigterm.rs  wait_after_die.rs  wait_twice.rs  wait_twice_after_sigterm.rs  wait_with_output.rs
tests/tokio_windows/: id_same_as_inner.rs  inner_read_stdout.rs  into_inner_write_stdin.rs  kill_and_try_wait.rs  mod.rs  try_wait_after_die.rs  wait_after_die.rs  wait_twice.rs  wait_with_output.rs
