[package]
name = "process-wrap"
version = "8.0.1"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Wrap a Command, to spawn processes in a group or session or job etc"
keywords = ["command", "process", "group", "session", "pty"]

documentation = "https://docs.rs/process-wrap"
homepage = "https://github.com/watchexec/process-wrap"
repository = "https://github.com/watchexec/process-wrap"
readme = "README.md"

edition = "2021"
exclude = ["/bin", "/.github"]
rust-version = "1.75.0"

[dependencies]
futures = { version = "0.3.30", optional = true }
indexmap = "2.2.6"
tokio = { version = "1.37.0", features = ["io-util", "macros", "process", "rt"], optional = true }
tracing = "0.1.40"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", default-features = false, features = ["fs", "poll", "signal"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", optional = true }

[dev-dependencies]
remoteprocess = "0.4.13"
tokio = { version = "1.37.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }

[features]
default = ["creation-flags", "job-object", "kill-on-drop", "process-group", "process-session"]

## Frontend: StdCommandWrap
std = ["dep:nix"]

## Frontend: TokioCommandWrap
tokio1 = ["dep:nix", "dep:futures", "dep:tokio"]

## Wrapper: Creation Flags
creation-flags = ["dep:windows", "windows/Win32_System_Threading"]

## Wrapper: Job Object
job-object = ["dep:windows", "windows/Win32_Security", "windows/Win32_System_Diagnostics_ToolHelp", "windows/Win32_System_IO", "windows/Win32_System_JobObjects", "windows/Win32_System_Threading"]

## Wrapper: Kill on Drop
kill-on-drop = []

## Wrapper: Process Group
process-group = []

## Wrapper: Process Session
process-session = ["process-group"]

## Wrapper: Reset Sigmask
reset-sigmask = []

[package.metadata.docs.rs]
all-features = true
